<resources>
    <string name="app_name">Light and Brightness</string>
    <string name="app_title_string"><![CDATA[Light & Brightness]]></string>
    <string name="light_sensor_string">Light Sensor</string>
    <string name="brightness_string">Brightness</string>
    <string name="start_recording_string">Start Recording</string>
    <string name="not_recording_string">Not Recording</string>
    <string name="clear_data_string">Clear Data</string>
    <string name="share_data_string">Share Data</string>
</resources>